[metadata]
name = torchPS-ngoetz
version = 1.0.1
author = Niklas Götz
author_email = goetz.niklas@protonmail.com
description = A package for Phase Space Sampling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NGoetz/TorchPS
project_urls =
    Bug Tracker = https://github.com/NGoetz/TorchPS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = torchps
install_requires =
  torch==1.6
  numpy==1.19.1
  python-dateutil
packages = find:
python_requires = >=3.6

[options.packages.find]
where = torchps
